--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: null
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.min.css" />
   <meta name="theme-color" content="#fff">
   <link rel="icon" href="{{ site.baseurl }}/favicon.ico">
-  <meta name="description" content="A fitness app." />
+  <meta name="description" content="A simple project" />
   <meta property="og:image" content="{{ site.baseurl }}/preview.jpg">
   <link rel="manifest" href="{{ site.baseurl }}/pwa/manifest.json">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
